# homebase

./: .base.yaml  .base.yml  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  README.md  TODO-cache.md  TODO-config.md  TODO-favorites.md  TODO-hooks.md  TODO-new.md  TODO-setup.md  TODO-wt.md  TODO.md  homebase-startup.pyinstrument-2.json  homebase-startup.pyinstrument-3.json  homebase-startup.pyinstrument.json  mise.toml  pyproject.toml
docs/: actions.md  example.md  hooks.md  integrations.md  kitchen-sink-config.md  screenshots.md
docs/QA/: README.md
docs/QA/history/: bandit.csv  benchmark.csv  coverage.csv  import-linter.csv  mypy.csv  radon-cc.csv
docs/QA/scripts/: qa_track.py
example/: README.md
example/.copier/python-uv/: copier.yml
example/.homebase/: cache.sqlite3  config.yaml
example/.scaffold/: README.md  _setup.sh  _setup_archive.sh  _setup_tags.sh
example/2026-04-15_meeting-notes-q2/: .base.yaml  NOTES.md
example/_tags/3dprint/: raspi-octoprint
example/_tags/blog/: 2026-02-03_old-blog-engine
example/_tags/cve/: notes-cve-2025-12345
example/_tags/esp32/: esp32-tempsensor
example/_tags/fork/: nspanel-firmware.fork
example/_tags/hass/: home-assistant
example/_tags/homelab/: go-prometheus-exporter  homelab-proxmox  homelab-truenas
example/_tags/infra:network/: raspi-pihole
example/_tags/k8s/: k3s-cluster  kubectl-helper  talk-cloudnative-2026
example/_tags/lang:python/: cloud-cost-dashboard
example/_tags/lang:rust/: 2024-08-01_first-rust-tutorial  rust-port-scanner
example/_tags/learning/: 2025-11-30_kube-the-hard-way
example/_tags/linux/: 2024-03-12_old-laptop-migration
example/_tags/notes/: 2026-04-15_meeting-notes-q2
example/_tags/personal/: recipes
example/_tags/prio:low/: arch-install-notes
example/_tags/proxmox/: 2025-06-22_homelab-v1-supermicro
example/_tags/school/: 2023-02-14_thesis-final
example/_tags/scripting/: aws-cost-report  bash-backup-scripts
example/_tags/secrets/: terraform-aws-baseline
example/_tags/work/: terraform-aws-baseline-feat-eks  terraform-gcp-vpc
example/arch-install-notes/: .base.yaml  NOTES.md  README.md
example/esp32-tempsensor/: .base.yaml  README.md  platformio.ini
example/esp32-tempsensor/src/: main.cpp
example/notes-cve-2025-12345/: .base.yaml  NOTES.md
example/raspi-octoprint/: .base.yaml  README.md
example/recipes/: .base.yaml  sourdough.md
example/talk-cloudnative-2026/: .base.yaml  README.md  slides.md
example/terraform-aws-baseline/: .base.yaml  .envrc.example  NOTES.md
example/terraform-aws-baseline-feat-eks/: .base.yaml
integrations/: AGENTS.md
integrations/browser-tab-sync/: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOP.md  INSTALL.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  mise.toml
integrations/browser-tab-sync/cli/: AGENTS.md  pyproject.toml
integrations/browser-tab-sync/cli/src/homebase_bts/: __init__.py  __main__.py  cli.py  config.py  installer.py  models.py  nativehost.py  profileio.py  protocol.py  reconcile.py  state.py  urlnorm.py
integrations/browser-tab-sync/cli/src/homebase_bts/backends/: __init__.py  base.py  extension.py  local.py  macos.py  native.py
integrations/browser-tab-sync/cli/tests/: test_cli.py  test_config.py  test_host_bridge.py  test_installer.py  test_local_backend.py  test_merge.py  test_models.py  test_native_backend.py  test_profileio.py  test_reconcile.py  test_urlnorm.py
integrations/browser-tab-sync/examples/: vacation.json
integrations/browser-tab-sync/extension/: AGENTS.md  package-lock.json  package.json  wxt.config.ts
integrations/browser-tab-sync/schema/: native-messaging.schema.json  profile.schema.json
integrations/raycast/: AGENTS.md  README.md  mise.toml  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
integrations/raycast/src/: projects.tsx
scripts/: deploy.py
src/homebase/: __init__.py  __main__.py
src/homebase/archive/: date_detect.py  io.py  ops.py  service.py
src/homebase/cache/: api.py  concurrency.py  queue.py  store.py
src/homebase/cli/: __init__.py  completion.py  dispatch.py  entry.py  parser.py  shell_init.py
src/homebase/commands/: actions.py  archive.py  basic.py  debug_tools.py  deworktree.py  example.py  fix_worktrees.py  hooks_cmd.py  interactive_flow.py  raycast.py  setup.py  workspace.py
src/homebase/config/: cache_profile.py  hooks.py  open_mode.py  prefs.py  property_defs.py  store.py  tag_rules.py  workspace.py
src/homebase/core/: changelog.py  constants.py  debug_timers.py  logging.py  models.py  nested.py  packed_meta.py  prompting.py  runtime_init.py  setup_app.py  setup_model.py  setup_render.py  setup_select.py  setup_tools.py  utils.py  version.py
src/homebase/filter/: engine.py  tag_index.py
src/homebase/hooks/: __init__.py  api.py  loader.py  refresh.py  runtime.py  snapshot.py
src/homebase/metadata/: api.py  app_workspace.py  property.py  store.py  utils.py
src/homebase/notes/: log_md.py
src/homebase/tmux/: client_focus.py  commands.py  core.py  external.py  flow.py  focus_debug.py  registry.py
src/homebase/ui/: __init__.py  (+9 more)
tests/: test_action_catalog.py  test_action_items.py  test_action_items_filtering.py  test_action_map.py  test_archive_date_detect.py  test_archive_io.py  test_archive_ops.py  test_archive_reorganize.py  test_archive_service.py  test_archive_worker.py  test_archive_worktree.py  test_benchmark_cmd.py  test_benchmark_helpers.py  test_benchmark_report.py  test_benchmark_seeder.py  test_bootstrap.py  test_builtin_actions.py  test_bulk_confirm.py  test_bulk_dispatch.py  test_bundled_hook_modules.py  test_cache_concurrency.py  test_cache_profile_config.py  test_cache_refresh_sync.py  test_cache_store.py  test_cache_worktree_fields.py  test_cli_completion.py  test_cli_dispatch.py  test_cli_fix_dispatch.py  test_cli_hooks_refresh.py  test_cmd_archive_mv.py  test_cmd_fix.py  test_cmd_fix_repo_dir.py  test_cmd_tags_ls.py  test_commands_basic.py  test_commands_setup.py  test_commands_workspace.py  test_config_favorites.py  test_config_hooks.py  test_config_hotbar.py  test_config_prefs.py  (+154 more)
(+149 files in other folders)
