[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "homebase"
version = "0.1.0"
description = "Homebase TUI and project workspace tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  "textual>=0.88.1",
  "PyYAML>=6.0.2",
  "loguru>=0.7.3",
]

[project.scripts]
homebase = "homebase.cli:entrypoint"
b = "homebase.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
]

[tool.coverage.run]
branch = true
source = ["src/homebase"]
omit = ["tests/*"]

[tool.coverage.report]
skip_covered = false
show_missing = false
precision = 1

[tool.mypy]
python_version = "3.11"
files = ["src/homebase"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true

[tool.vulture]
paths = ["src/homebase"]
min_confidence = 80
exclude = []

[tool.bandit]
exclude_dirs = ["tests"]

[tool.importlinter]
root_packages = ["homebase"]

[[tool.importlinter.contracts]]
name = "layering (AGENTS.md §5)"
type = "layers"
layers = [
  "homebase.cli",
  "homebase.ui",
  "homebase.commands",
  "homebase.workspace",
  "homebase.tmux | homebase.notes | homebase.filter | homebase.archive | homebase.metadata | homebase.cache",
  "homebase.config",
  "homebase.core",
]

[tool.hatch.build.targets.wheel]
packages = ["src/homebase"]

[tool.hatch.build.targets.sdist]
include = [
  "src/homebase",
  "tests",
  "README.md",
  "AGENTS.md",
  "CLAUDE.md",
  ".cursorrules",
  ".windsurfrules",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.1.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.13.0",
    "import-linter>=2.1",
    "vulture>=2.13",
    "bandit>=1.8.0",
    "radon>=6.0.1",
]
