[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "homebase"
version = "0.5.2"
description = "Homebase TUI and project workspace tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  "textual>=0.88.1",
  "PyYAML>=6.0.2",
  "loguru>=0.7.3",
]

[project.optional-dependencies]
# macOS only. Lets `b open` outside tmux activate the terminal window via
# a direct Cocoa call instead of spawning osascript — noticeably faster
# (no subprocess + AppleScript-compile cost). Optional: falls back to
# osascript automatically when not installed. See `b setup` / README.
macos-fast-focus = ["pyobjc-framework-Cocoa>=10.3; sys_platform == 'darwin'"]

[project.scripts]
homebase = "homebase.cli:entrypoint"
b = "homebase.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
]

[tool.coverage.run]
branch = true
source = ["src/homebase"]
omit = ["tests/*"]

[tool.coverage.report]
skip_covered = false
show_missing = false
precision = 1

[tool.mypy]
python_version = "3.11"
files = ["src/homebase"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true

[tool.vulture]
paths = ["src/homebase"]
min_confidence = 80
exclude = []

[tool.bandit]
exclude_dirs = ["tests"]
# B404/B603/B607: subprocess is used throughout to shell out to git/tar/tmux/
#   ssh; argv-list form is the safe pattern and partial paths are the standard
#   way to honor PATH. Per-site nosec would be noise without benefit.
# B105: filter parser uses operator string literals ("AND", "OR", "(", ")", "|")
#   that trip the hardcoded-password heuristic.
# B101: asserts are kept as fail-fast invariants per AGENTS.md §8.
skips = ["B101", "B105", "B404", "B603", "B607"]

[tool.importlinter]
root_packages = ["homebase"]

[[tool.importlinter.contracts]]
name = "layering (AGENTS.md §5)"
type = "layers"
layers = [
  "homebase.cli",
  "homebase.ui",
  "homebase.commands",
  "homebase.workspace",
  "homebase.hooks",
  "homebase.tmux | homebase.notes | homebase.filter | homebase.archive | homebase.metadata | homebase.cache",
  "homebase.config",
  "homebase.core",
]
ignore_imports = [
  "homebase.hooks.bundled.post._tag_symlink_sync_common -> homebase.workspace.tag_sync",
]

[tool.hatch.build.targets.wheel]
packages = ["src/homebase"]

[tool.hatch.build.targets.sdist]
include = [
  "src/homebase",
  "tests",
  "README.md",
  "AGENTS.md",
  "CLAUDE.md",
  ".cursorrules",
  ".windsurfrules",
]
exclude = [
  "integrations",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.1.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.13.0",
    "import-linter>=2.1",
    "vulture>=2.13",
    "bandit>=1.8.0",
    "radon>=6.0.1",
]
