[project]
name = "homebase-bts"
version = "0.0.1"
description = "Browser-tab-sync helper for Homebase."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.15",
    "pydantic>=2.10",
]

[project.scripts]
homebase-bts = "homebase_bts.cli:app"
homebase-bts-host = "homebase_bts.nativehost:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homebase_bts"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-x --tb=short"
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["homebase_bts"]
